apps/production-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-svc
  namespace: production
  labels:
    app.kubernetes.io/name: currency-converter
    app.kubernetes.io/managed-by: argocd
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: currency-converter
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  sessionAffinity: None
